apps/bjj/base/routes/bjj-httproutes.yaml
# HTTPRoute: rutează traficul către Service-ul bjj-server.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bjj-redirect
  namespace: bjj
spec:
  parentRefs:
  - name: main-gateway
    sectionName: http
  hostnames:
  - bjjbackend.cardano.vip
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
# HTTPRoute pentru traficul HTTPS către bjj-server.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bjj-server-route
  namespace: bjj
spec:
  parentRefs:
  - name: main-gateway
    sectionName: https
  hostnames:
  - bjjbackend.cardano.vip
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: bjj-server
      port: 8082
